# ml-exercise-adult-income

./: .gitignore  Makefile  README.md  dvc.yaml  main.py  params.yaml  pyproject.toml
.dvc/: config
data/: processed.dvc  raw.dvc
data/processed/: adult_processed.csv.dvc
data/raw/: adult.csv.dvc
dvc_plots/: index.html
metrics/: .gitignore  metrics_history.json
src/: download_dataset.py  evaluate.py  permutation_importance.py  preprocess.py  train.py
